[server-apply] adds autherization processing
