# server_apply/src/middlewares/authGuard.js
@@ -1,13 +1,16 @@
 const logger = require("pino")();
+const jwt = require('jsonwebtoken');
 
 const checkAuthentication = (req, res, next) => {
   const authHeader = req.headers.authorization;
 
   if (authHeader) {
     const token = authHeader.split(" ")[1];
+    logger.info("token: "+token);
 
     jwt.verify(token, process.env.JWT_SECRET, (err, user) => {
       if (err) {
+        logger.error("Auth Fail", authHeader);
         return res.sendStatus(403);
       }
 
@@ -16,9 +19,9 @@ const checkAuthentication = (req, res, next) => {
       next();
     });
   } else {
+    logger.error("Auth Fail - No auth header", authHeader);
     res.sendStatus(401);
   }
-  logger.error("Auth Fail", authHeader);
 };
 
 module.exports = {
